bug fixed in mobile version of detail section's second shifted paragraph

--- a/scss/sections/_generic.scss
+++ b/scss/sections/_generic.scss
@@ -68,6 +68,8 @@
     /*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
     @media all and (max-width : $paragraph-media-mobile-width)
     {
-        margin-top : 25px;
+        top           : 0;
+        margin-top    : 0;
+        margin-bottom : 0;
     }
 }
